--- a/styles.css
+++ b/styles.css
@@ -1,52 +1,63 @@
 body {
-    font-family: monospace;
-    line-height: 1.6;
-    color: #000;
-    background-color: #fff;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-  }
+  font-family: monospace;
+  font-weight: 400;
+  line-height: 1.6;
+  color: #000;
+  background-color: #fff;
+  max-width: 1000px;
+  margin: 0 auto;
+  margin-top: 30px;
+}
 
-  h1,
-  h2 {
-    text-transform: uppercase;
-  }
+h1,
+h2 {
+  text-transform: uppercase;
+}
 
-  a {
-    color: #000;
-    text-decoration: none;
-  }
+a {
+  color: #000;
+  text-decoration: none;
+}
 
-  a:hover {
-    text-decoration: underline;
-  }
+footer {
+  margin-bottom: 30px;
+}
 
-  .profile-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+a:hover {
+  text-decoration: underline;
+}
 
-  .profile-text {
-    flex: 1;
-  }
+.skills {
+  font-weight: 200;
+  padding-top: 20px;
+}
 
-  .profile-image {
-    width: 150px;
-    height: 150px;
-    margin-left: 20px;
-    margin-bottom: 35px;
-  }
+.profile-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  .project {
-    border: 1px solid #000;
-    padding: 10px;
-    margin-bottom: 20px;
-  }
+.profile-text {
+  flex: 1;
+}
 
-  .project img {
-    max-width: 100px;
-    float: right;
-    margin-left: 10px;
-  }
+.profile-image {
+  width: 150px;
+  height: 150px;
+  margin-left: 20px;
+  margin-bottom: 35px;
+}
+
+.section {
+  border: 1px solid #000;
+  padding-right: 10px;
+  padding-left: 10px;
+  margin-bottom: 20px;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.section:hover {
+  transform: scale(1.01);
+}
